[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://src/hud/TimerLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/hud/HUD.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/hud/HUD32.tres" type="DynamicFont" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TimerLabel" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_right = 256.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]0.0[/center]"
tab_size = 0
scroll_active = false

[node name="GameOverLabel" type="RichTextLabel" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -35.0
margin_right = 256.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]GameOver[/center]"
text = "GameOver"
scroll_active = false

[node name="FinalScoreLabel" type="RichTextLabel" parent="GameOverLabel"]
margin_left = 130.0
margin_top = 71.0
margin_right = 380.0
margin_bottom = 141.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Final Score:"

[node name="SuccessLabel" type="RichTextLabel" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -35.0
margin_right = 254.0
margin_bottom = 66.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Success![/center]"
text = "Success!"
scroll_active = false

[node name="ScoreLabel" type="RichTextLabel" parent="SuccessLabel"]
margin_left = 150.0
margin_top = 71.0
margin_right = 360.0
margin_bottom = 141.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Score:"

[node name="ContinueLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = 106.0
margin_right = 164.0
margin_bottom = 136.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Press Space to Continue
"
scroll_active = false

[node name="RestartLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = 106.0
margin_right = 153.0
margin_bottom = 136.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Press Space to Restart
"
scroll_active = false
